nes-systests/systest/tests/testdata/errors/schema/ResultsEmptyButSchemasDifferent.dummy
CREATE LOGICAL SOURCE stream(id UINT64 NOT NULL, value UINT64 NOT NULL);
CREATE PHYSICAL SOURCE FOR stream TYPE File;
ATTACH INLINE
1,2

CREATE SINK CORRECT_SINK(stream.id UINT64 NOT NULL, stream.value UINT64 NOT NULL)  TYPE File;
SELECT id, value FROM stream INTO CORRECT_SINK;
----
1,2

CREATE SINK INCORRECT_SINK(stream.id UINT64 NOT NULL, stream.value FLOAT64 NOT NULL)  TYPE File;
SELECT id, value FROM stream INTO INCORRECT_SINK;
----

